# todo-list

./: Cargo.toml  build.rs  tasks.json
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs  tests.rs
src/list/: mod.rs  tests.rs
src/list/task/: date.rs  mod.rs
src/traits/: mod.rs
