[package]
edition = "2018"
name = "todo-list"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
clap = {version = "4.5.16", features = ["derive"]}
crossterm = "0.28.1"
macros = {path = "macros"}
prettytable = "0.10.0"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.125"
sqlparser = "0.50.0"
std-reset = "0.1.4"

[workspace]
members = [
  "macros",
]

